common-applications/om/om-webserver-xihe/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: om-webserver-xihe
  name: om-webserver-xihe
