common-applications/om/om-webserver-xihe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: om-webserver-service
  namespace: om-webserver-xihe
spec:
  ports:
    - name: srv
      port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: om-webserver
  type: ClusterIP
