common-applications/om/om-webserver-xihe/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_origin ~ '^https:\/\/xihe\.mindspore\.cn$') {
        set $allow_origin $http_origin;  
      }
      if ($http_origin ~ '^https:\/\/xihe2\.test\.osinfra\.cn$') {
        set $allow_origin $http_origin;  
      }
      more_set_headers "Access-Control-Allow-Origin: $allow_origin";
      more_set_headers "Access-Control-Allow-Credentials: true";
      more_set_headers "Access-Control-Allow-Methods: GET, PUT, POST, DELETE,PATCH, OPTIONS";
  name: om-webserver-ingress
  namespace: om-webserver-xihe
spec:
  tls:
    - hosts:
        - xiheapi.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: xiheapi.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /
